sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:7: error: illegal start of simple expression
      if ()
          ^AlgCocktailSort1:8: error: ')' expected but '}' found.
    }
    ^