sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var inverse:Boolean = false
  var fini:Boolean = false
  while (fini!=true){
    for (i<- 0 to getNombreValeurs()-2){
      if ()
    }
  }
}